Commit 3: Tambah gambar profil

--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
 <body>
     <h1>Halo, saya Kahvy!</h1>
     <p>Ini adalah halaman profil pribadi saya.</p>
+
+    <img src="https://via.placeholder.com/150" alt="Foto Profil">
+
+    
 </body>
 </html>
