Commit 4: Tambah daftar info pribadi

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 
     <img src="https://via.placeholder.com/150" alt="Foto Profil">
 
-    
+    <ul>
+        <li>Asal: Cianjur</li>
+        <li>Hobi: Coding, Mancing</li>
+        <li>Kampus: Universitas Suryakancana</li>
+    </ul>
+      
 </body>
 </html>
