Commit 5: Tambah link ke Instagram

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         <li>Hobi: Coding, Mancing</li>
         <li>Kampus: Universitas Suryakancana</li>
     </ul>
+
+    <p>Follow saya di <a href="https://www.instagram.com/kahvy285?igsh=eWt6c2h6aWRybGM1">Instagram</a></p>
+
       
 </body>
 </html>
