Commit 6: Tambah style dasar CSS

--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profil saya</title>
+
+    <style>
+        body {
+          font-family: Arial;
+          text-align: center;
+          padding: 20px;
+        }
+        img {
+          border-radius: 50%;
+        }
+      </style>
 </head>
 <body>
     <h1>Halo, saya Kahvy!</h1>
@@ -19,6 +30,6 @@
 
     <p>Follow saya di <a href="https://www.instagram.com/kahvy285?igsh=eWt6c2h6aWRybGM1">Instagram</a></p>
 
-      
+    
 </body>
 </html>
