--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
           font-family: Arial;
           text-align: center;
           padding: 20px;
+          background-color: #0e19a8;
         }
         img {
           border-radius: 50%;
