--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 
     <p>Follow saya di <a href="https://www.instagram.com/kahvy285?igsh=eWt6c2h6aWRybGM1">Instagram</a></p>
 
-    
+    <button onclick="alert('Silakan hubungi saya di mkahvymaulana135@gmail.com')">Hubungi Saya</button>
+
 </body>
 </html>
