Commit 9: Tambah footer

--- a/index.html
+++ b/index.html
@@ -33,5 +33,9 @@
 
     <button onclick="alert('Silakan hubungi saya di mkahvymaulana135@gmail.com')">Hubungi Saya</button>
 
+    <footer>
+        <p>&copy; 2025 Kahvy. All rights reserved.</p>
+    </footer>
+      
 </body>
 </html>
