Commit 10: Refactor dan rapikan struktur HTML

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       </style>
 </head>
 <body>
+<table>
     <h1>Halo, saya Kahvy!</h1>
     <p>Ini adalah halaman profil pribadi saya.</p>
 
@@ -36,6 +37,6 @@
     <footer>
         <p>&copy; 2025 Kahvy. All rights reserved.</p>
     </footer>
-      
+</table>     
 </body>
 </html>
